--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,6 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "pdf-img-convert": "^1.2.1",
-    "pdf2pic": "^3.1.0",
     "tesseract.js": "^5.0.4",
     "ts-node": "^10.9.2"
   },
